# whisperPods

./: .gitignore  =0.30  README.md  getPod.py  package-lock.json  package.json  pnpm-lock.yaml  searchPod.py  setup.cfg  whisperPod.py
app/: page.tsx
app/api/all-episodes/: route.ts
app/api/data/: route.ts
app/api/episode/: route.ts
app/api/mongo/: db.ts
app/episode/[ep_number]/: page.tsx
mongo/: db.js  mongodb.js
pages/: DataTable.js  _app.js  index.js
pages/api/: data.js  transcribe.js
python-backend/: .gitignore  README.md  setup.cfg  setup.py
python-backend/mongo/: db.py
python-backend/playground/: all_episodes.json  libsyn.py  ln.py  metadata.py  parse_rss.py  parsed_html_content.html  yt.py
python-backend/scripts/: .env  theDailyGwei.py  thedailygwei_metadata.json
python-backend/src/: whisperPod.py
python-backend/whisperPod/: __init__.py
python-backend/whisperPod/mongo/: __init__.py  db.py
python-backend/whisperPod/request/: __init__.py  metadata.py  requestPod.py  youtube.py
python-backend/whisperPod/transcribe/: __init__.py  accuracy.py  combiner.py  parser.py  segmenter.py  transcribePod.py
python-backend/whisperPod/transcribe/transcriptions/: ep574 _full_transcription.json  ep574_training_script.json
python-backend/whisperPod/utils/: __init__.py  utils.py
python-backend/whisperpod.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: getPod.py  whisperPod.py
styles/: globals.css
