[metadata]
name = whisperPod
version = 0.0.1
author = sters
author_email = sters.eth
description = Whisper to your pods
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
programming language :: Python :: 3
license :: OSI Approved :: MIT License
operating system :: OS Independent
[options]
python_requires = >=3.7
install_requires =
   pandas
   ipdb
   whisper
   getpodcast
   pymongo